feat: 优化主页，重构docker部署方案

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= webpackConfig.name %> - ferry</title>
+  <title><%= webpackConfig.name %></title>
   <meta name="keywords" content="ferry,vue,gin,go">
-  <meta name="description" content="FERRY 管理平台">
+  <meta name="description" content="WorkFlow">
   <style>
     html,
     body,
