--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <!-- 使用CDN的CSS文件 -->
+  <% for (var i in htmlWebpackPlugin.options.cdn &&
+  htmlWebpackPlugin.options.cdn.css) { %>
+  <link
+    href="<%= htmlWebpackPlugin.options.cdn.css[i] %>"
+    rel="stylesheet"
+  />
+  <% } %>
+  <!-- 使用CDN的CSS文件 -->
   <title><%= webpackConfig.name %></title>
   <meta name="keywords" content="ferry,vue,gin,go">
   <meta name="description" content="WorkFlow">
@@ -209,6 +218,13 @@
       <div class="loader-section section-right"></div>
     </div>
   </div>
+
+  <!-- 使用CDN的JS文件 -->
+  <% for (var i in htmlWebpackPlugin.options.cdn &&
+  htmlWebpackPlugin.options.cdn.js) { %>
+  <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+  <% } %>
+  <!-- 使用CDN的JS文件 -->
 </body>
 
 </html>
